Adição de estudos sobre HTML

--- a/Potencia Tech iFood - Desenvolvimento de Jogos/Criando as Primeiras Paginas com HTML e CSS/_sites_exDeTags/index.html
+++ b/Potencia Tech iFood - Desenvolvimento de Jogos/Criando as Primeiras Paginas com HTML e CSS/_sites_exDeTags/index.html
@@ -15,7 +15,7 @@
     <img/>
     <u> texto </u>
     <mark> outro texto </mark>
-    dois elevado a dois é 2<sup>2</sup>
+    dois elevado a dois é 2<sup>2</sup> e abaixo e 2<sub>2</sub>
     <a href="about.html" title="Clique aqui para mais informaçoes sobre o site"> Sobre </about></a>
 </body>
 </html>
